Front-end finalizado

--- a/Projeto-E_mails-Workers/docker-compose.yml
+++ b/Projeto-E_mails-Workers/docker-compose.yml
@@ -2,11 +2,20 @@ version: '3'
 volumes:
   dados:
 services:
-  db:
-    image: postgres:9.6
-    volumes:
-      # Volume dos dados
-      - dados:/var/lib/postgresql/data
-      # Scripts
-      - ./scripts:/scripts
-      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    db:
+        image: postgres:9.6
+        volumes:
+        # Volume dos dados
+        - dados:/var/lib/postgresql/data
+        # Scripts
+        - ./scripts:/scripts
+        - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+        - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    frontend:
+        image: nginx:1.13
+        volumes:
+              # Site
+              - ./web:/usr/share/nginx/html/
+        ports:
+              - 80:80
+               
