--- a/Projeto-E_mails-Workers/docker-compose.yml
+++ b/Projeto-E_mails-Workers/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3'
 volumes:
   dados:
-networks: 
+networks:
   banco:
-  web:       
+  web:
+  fila:
 services:
   db:
     image: postgres:9.6
@@ -13,31 +14,49 @@ services:
       # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks: 
-      - banco  
+    networks:
+      - banco
   frontend:
     image: nginx:1.13
-    volumes: 
-      #Site
-      - ./web:/usr/share/nginx/html
-      # Configuração Proxy reverso
+    volumes:
+      # Site
+      - ./web:/usr/share/nginx/html/
+      # Configuração do proxy reverso
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    ports: 
-      - 80:80 
-    networks: 
+    ports:
+      - 80:80
+    networks:
       - web
-    depends_on: 
-      - app    
+    depends_on:
+      - app
   app:
     image: python:3.6
-    volumes: 
+    volumes:
       # Aplicação
       - ./app:/app
-    working_dir: /app  
+    working_dir: /app
     command: bash ./app.sh
-    networks: 
+    networks:
       - banco
-      - web 
-    depends_on: 
-      - db      
-      
+      - web
+      - fila
+    depends_on:
+      - db
+      - queue
+    environment:
+      - DB_NAME=abc_sender
+  queue:
+    image: redis:3.2
+    networks:
+      - fila
+  worker:
+    build: worker
+    volumes:
+      # Worker
+      - ./worker:/worker
+    working_dir: /worker
+    command: worker.py
+    networks:
+      - fila
+    depends_on:
+      - queue
